Bug 388294 - "Add Flathub" button only disappears after restarting Discover
Summary: "Add Flathub" button only disappears after restarting Discover
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.11.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-28 15:13 UTC by Nate Graham
Modified: 2018-01-08 18:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2017-12-28 15:13:08 UTC
[Discover from git master]

Steps To Reproduce
1. Install or build Discover's Flatpak backend
2. Open Discover and go to Settings
3. Click the "Add Flathub" button. Flathub gets added.

Expected results
The "Add Flathub" button disappears immediately

Actual results
The "Add Flathub" button does not disappear, and clicking on it does nothing except emit console messages. To get the button to disappear, you need to restart Discover. It should disappear immediately after adding the Flathub source.
Comment 1 Aleix Pol 2018-01-08 12:28:42 UTC
Git commit 14dc698e9fff8453877af2478111beb8e6884eb4 by Aleix Pol.
Committed on 08/01/2018 at 12:24.
Pushed by apol into branch 'master'.

Share code-path between added and listed remotes

Checks for flatpak source action enabling when a repository is manually
added

M  +22   -25   libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.cpp
M  +1    -0    libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.h

https://commits.kde.org/discover/14dc698e9fff8453877af2478111beb8e6884eb4
Comment 2 Aleix Pol 2018-01-08 12:28:42 UTC
Git commit 069a201469e4c9fc33bc66663353357aa9294d02 by Aleix Pol.
Committed on 08/01/2018 at 12:21.
Pushed by apol into branch 'master'.

Refresh action list upon action change as the filter gets potentially wrong

M  +4    -0    libdiscover/ActionsModel.cpp

https://commits.kde.org/discover/069a201469e4c9fc33bc66663353357aa9294d02