Share code-path between added and listed remotes

Checks for flatpak source action enabling when a repository is manually
added

BUG: 388294